# mbb-ppt-generator

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  GOAL.md  HANDOFF.md  MAINTAINERS.md  MBB_PPT_QA_CHECKLIST.md  NOTICE  README.md  RESUME.md  ROADMAP.md  SKILL.md  STATE.md  STATUS.md  install.py  issues  mbb-ppt-generator.skill  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
archive/: BACKLOG.md  HANDOFF.md  STATE.md  install_cowork.sh
archive/reports/: 2026-06-11-v0.6.0-session-report.md
archive/specs/: v0.7.0-process-discipline.md
examples/: board_qbr_example.py  minimal_example.py  pitch_deck_example.py
experiences/: layout-pitfalls.md  overflow.md
mbb_ppt/: __init__.py  __main__.py  constants.py  core.py  deck_builder.py  engine.py
mbb_ppt/storylines/: __init__.py  ai_enterprise.py
mck_ppt/: constants.py  core.py  cover_image.py  engine.py  review.py
mck_ppt/storylines/: ai_enterprise.py
plugins/mbb-ppt-generator/: README.md
plugins/mbb-ppt-generator/.claude-plugin/: plugin.json
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/: AGENT.md  MAINTAINERS.md  SKILL.md
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/experiences/: chart-limits.md
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/mbb_ppt/: __init__.py  __main__.py  constants.py  core.py  deck_builder.py  engine.py  gates.py  qa.py  review.py
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/mbb_ppt/surfaces/: __init__.py  mcp_server.py
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/references/: INDEX.md  api-cheatsheet.md  api-schemas.yaml  known-pitfalls.md
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/references/framework/: engine-api.md  guard-rails.md  planning-guide.md
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/references/layouts/: charts-advanced.md  charts-bar-line.md  charts-circular.md  comparison.md  dashboards.md  data-stats.md  frameworks.md  images.md  narrative.md  special.md  structure.md  timeline.md
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/references/scripts/: gate_check_content.py  gate_check_render.py  gate_check_storyboard.py  generate_cheatsheet.py
plugins/mbb-ppt-generator/skills/mbb-ppt-generator/references/team/: brand-guide.md
references/: INDEX.md  api-cheatsheet.md  layout-matrix.yaml
references/framework/: engine-api.md  guard-rails.md  planning-guide.md
references/layouts/: charts-advanced.md  charts-bar-line.md  charts-circular.md  comparison.md  dashboards.md  frameworks.md  images.md  narrative.md  special.md  structure.md  timeline.md
references/scripts/: gate_check_content.py  gate_check_render.py
references/team/: presentation-convention.md
tests/: __init__.py  conftest.py  test_gates.py  test_layouts.py  test_smoke.py
