[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbb-ppt-generator"
version = "0.1.0"
description = "Executive-grade PowerPoint generation with consulting-style discipline. Self-contained skill with a five-stage workflow and machine-readable gates. Adapted from Likaku's Mck-ppt-design-skill."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "albertojb" },
]
maintainers = [
    { name = "albertojb" },
]
keywords = [
    "powerpoint",
    "pptx",
    "presentation",
    "slides",
    "consulting",
    "mbb",
    "executive-deck",
    "python-pptx",
    "ai-skill",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-pptx >= 0.6.21",
    "lxml >= 4.9",
    "pyyaml >= 6.0",
]

[project.optional-dependencies]
# Local image processing (rembg cutout) — needed only when a caller passes
# a real image to eng.cover() and wants automatic background removal, or
# uses the cover_image module's local image-processing helpers.
image = [
    "pillow >= 10.0",
    "numpy >= 1.24",
    "rembg >= 2.0",
]

# Cloud cover-image generation (Tencent Hunyuan API). OFF by default per the
# skill's security posture; enable only if your confidentiality context allows
# transmitting slide titles to a third-party generation service.
cloud = [
    "tencentcloud-sdk-python >= 3.0",
]

# Development tooling — for running the test suite.
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
]

# All optional dependencies in one extra.
all = [
    "pillow >= 10.0",
    "numpy >= 1.24",
    "rembg >= 2.0",
    "tencentcloud-sdk-python >= 3.0",
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
]

[project.urls]
Homepage = "https://github.com/albertojb/mbb-ppt-generator"
Documentation = "https://github.com/albertojb/mbb-ppt-generator/blob/main/SKILL.md"
Repository = "https://github.com/albertojb/mbb-ppt-generator.git"
Issues = "https://github.com/albertojb/mbb-ppt-generator/issues"
Changelog = "https://github.com/albertojb/mbb-ppt-generator/blob/main/CHANGELOG.md"
Upstream = "https://github.com/likaku/Mck-ppt-design-skill"

# ── setuptools configuration ────────────────────────────────────────────

[tool.setuptools]
# Top-level packages bundled in the wheel.
packages = ["mck_ppt", "mck_ppt.storylines"]
include-package-data = true

[tool.setuptools.package-data]
# Reference assets the engine doesn't strictly need to import but that ship
# with the skill so consumers get the full documentation/gate workflow.
# (These are not imported by mck_ppt itself; consumers reach them via the
# repo path or by reading from the installed package data directory.)
"*" = ["py.typed"]

# ── pytest configuration ────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# ── coverage (optional) ─────────────────────────────────────────────────

[tool.coverage.run]
source = ["mck_ppt"]
omit = [
    "mck_ppt/cover_image.py",     # opt-in cloud feature, not exercised in tests
    "mck_ppt/storylines/*",       # template content, not core engine
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
