[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbb-ppt-generator"
version = "0.5.1"
description = "Executive-grade PowerPoint generation with consulting-style discipline. Self-contained skill with a five-stage workflow and machine-readable gates. Adapted from likaku's Mck-ppt-design-skill (Apache 2.0)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "albertojb" },
]
maintainers = [
    { name = "albertojb" },
]
keywords = [
    "powerpoint",
    "pptx",
    "presentation",
    "slides",
    "consulting",
    "mbb",
    "executive-deck",
    "python-pptx",
    "ai-skill",
    "claude-skill",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-pptx >= 0.6.21",
    "lxml >= 4.9",
    "pyyaml >= 6.0",
]

[project.optional-dependencies]
# Local image processing — needed only when a caller passes a real image to
# eng.cover() and wants automatic background removal.
image = [
    "pillow >= 10.0",
    "numpy >= 1.24",
    "rembg >= 2.0",
]

# Development tooling — for running the test suite.
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
]

# All optional dependencies in one extra.
all = [
    "pillow >= 10.0",
    "numpy >= 1.24",
    "rembg >= 2.0",
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
]

[project.scripts]
mbb-ppt = "mbb_ppt.__main__:main"

[project.urls]
Homepage = "https://github.com/albertojb/mbb-ppt-generator"
Documentation = "https://github.com/albertojb/mbb-ppt-generator/blob/main/SKILL.md"
Repository = "https://github.com/albertojb/mbb-ppt-generator.git"
Issues = "https://github.com/albertojb/mbb-ppt-generator/issues"
Changelog = "https://github.com/albertojb/mbb-ppt-generator/blob/main/CHANGELOG.md"
Upstream = "https://github.com/likaku/Mck-ppt-design-skill"

# ── setuptools configuration ────────────────────────────────────────────

[tool.setuptools]
packages = ["mbb_ppt", "mbb_ppt.storylines"]
include-package-data = true

[tool.setuptools.package-dir]
mbb_ppt = "plugins/mbb-ppt-generator/skills/mbb-ppt-generator/mbb_ppt"
"mbb_ppt.storylines" = "plugins/mbb-ppt-generator/skills/mbb-ppt-generator/mbb_ppt/storylines"

[tool.setuptools.package-data]
"*" = ["py.typed"]

# ── pytest configuration ────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# ── coverage (optional) ─────────────────────────────────────────────────

[tool.coverage.run]
source = ["mbb_ppt"]
omit = [
    "mbb_ppt/storylines/*",       # template content, not core engine
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
